numerous changes